Bug 1001137 - Enabling FifoWatcher via user pref does not work. r=froydnj